--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 			<div>
 				<h2>Travel Connect...</h2>
-				<p> est un start-up specialisé dans la location de hotspots Wi-Fi portables pour tous les voyageurs.</p>
+				<p> est une start-up specialisé dans la location de hotspots Wi-Fi portables pour tous les voyageurs.</p>
 			</div>
 
 			<div class="QSN" style="float:right">
@@ -50,7 +50,7 @@
 				<h3>Stable, Rapide et Sécurisée</h3>
 			</div>
 
-		<h1>Pour tous les destinations!</h1>
+		<h1>Pour toutes les destinations!</h1>
 
 		<div class="landmarks"style="float:center">
 			<div class="landmark">
@@ -78,8 +78,8 @@
 		<div class= "Wifi" style="float:center">
 			<img src="images/wifi.png" alt="wifi" >
 		</div>
-		<h3> Réserver vos boites wifi en un clic et </h3>
-		<h3>Récupérer les le jour J de votre voyage ! </h3>
+		<h3> Réservez vos boites wifi en un clic et </h3>
+		<h3>Récupérez les le jour J de votre voyage ! </h3>
 
 		<h1 id="tag3">Nos contacts</h1>
 
